--- a/FederationUI.ui
+++ b/FederationUI.ui
@@ -204,17 +204,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QListView" name="NewsFeed">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="autoFillBackground">
-       <bool>true</bool>
-      </property>
-     </widget>
+     <widget class="QTextBrowser" name="NewsFeed"/>
     </item>
    </layout>
   </widget>
